[package]
name = "key-value-server-rs"
version = "0.1.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/drconopoima/key-value-server-rs.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
